# jax-data

./: README.md  pyproject.toml  requirements.txt
jax_data/: __init__.py
jax_data.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_jax_data.py
